# scATrans

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  PKG-INFO  README.md  SECURITY.md  conftest.py  conftest_fixtures.py  coverage  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml  pypi-publish.yml
docs/: ROADMAP.md  api_stability.md  conf.py  domain_assumptions.md  faq.md  index.md  installation.md  license.md  method.md  quickstart.md  references.md  requirements.txt  statistical_guidance.md
docs/_static/css/: custom.css
docs/api/: index.md
docs/tutorials/: index.md  t_ec_active_transcription.ipynb  t_ec_gene_upset.ipynb  t_ec_standalone_de_enrichment.ipynb  t_ga_active_transcription.ipynb  t_gse226488_partition_mechanism.ipynb
docs/user_guide/: advanced.md  enrichment.md  gene_features.md  index.md  plotting.md  standalone_de.md  workflow.md
examples/: memento_de_example.py  partition_de_by_mechanism_example.py  real_data_template.py  select_annotate_workflow_example.py  synthetic_active_transcription.py
github/workflows/: ci.yml  publish.yml
packaging/bioconda/recipes/scatrans/: meta.yaml
packaging/ecosystem-packages/: PR_description.txt  meta.yaml
scripts/: make_release_zips.py
src/scatrans/: __init__.py  _bias.py  _de.py  _permutation.py  _utils.py  _velocity.py  _version.py  enrich.py  generate_gene_features.py  pl.py  pp_bias.py  qc.py  tl.py
src/scatrans/data/: DATA_LICENSES.md  Hs_KEGG_2026.txt  Mm_KEGG_2026.txt  Mus_musculus.GRCm39.115_gene_features.parquet  README.md  human_GRCh38_2024A_gene_features.parquet  mouse_2020A_gene_features.parquet
src/scatrans/enrich/: __init__.py  _data.py  compare.py  gsea.py  ora.py  report.py  simplify.py
src/scatrans/tl/: __init__.py  _common.py  active.py  adaptive.py  bias.py  de.py  design.py  filter.py  mechanism.py  nascent.py  partition.py  pipeline.py
tests/: conftest.py  test_adaptive.py  test_basic.py  test_bias.py  test_combo_regressions.py  test_de_backends.py  test_de_core_coverage.py  test_de_edge_cases.py  test_domain_assumptions_verified.py  test_enrich_api.py  test_enrich_go.py  test_filter_select_by.py  test_gene_upset.py  test_mechanism.py  test_nascent.py  test_package_layout.py  test_partition.py  test_pipeline_result.py  test_pl_coverage.py  test_pl_extended.py  test_pl_smoke.py  test_pp_bias_cli.py  test_public_api.py  test_regime.py  test_regression_bugs.py  test_small_sample_edges.py  test_sort_order.py  test_statistical_guards.py  test_tl_coverage.py
