[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "scatrans"
dynamic = ["version"]
description = "Single-cell Active Transcription Analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "scATrans Developers"}
]
keywords = ["single-cell", "RNA-seq", "velocity", "active transcription", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "scanpy>=1.9,<2.0",
    "anndata>=0.8",
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "joblib>=1.2",
    "statsmodels>=0.13",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "adjustText>=0.7",
    'importlib_resources>=5.0; python_version < "3.9"',
]

[project.optional-dependencies]
advanced = ["scvelo>=0.3.0"]
pseudobulk = ["pydeseq2>=0.4.0"]
gene_features = ["gtfparse>=1.3.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4.0"]

[project.scripts]
generate-gene-features = "scatrans.generate_gene_features:main"

[project.urls]
Homepage = "https://github.com/scATrans/scatrans"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scatrans = ["data/*.parquet", "data/*.md"]

[tool.setuptools_scm]
write_to = "src/scatrans/_version.py"
fallback_version = "0.7.0-dev"  # Allows editable installs and builds outside of a git checkout

# Recommended for clean versions in releases
version_scheme = "post-release"
local_scheme = "no-local-version"

# Ruff: fast Python linter + formatter (replaces many tools)
[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    "backup/*",
    "legacy/*",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length (formatter handles)
    "B008",  # do not perform function calls in argument defaults (we have some scanpy-style)
    "B904",  # within except raise from (intentional in several places)
]

[tool.ruff.lint.isort]
known-first-party = ["scatrans"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::FutureWarning:anndata.*",
]

[tool.coverage.run]
source = ["src/scatrans"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
