[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scatrans"
dynamic = ["version"]
description = "Single-cell Active Transcription Analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "scATrans Developers"}
]
keywords = ["single-cell", "RNA-seq", "unspliced", "nascent RNA", "active transcription", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "scanpy>=1.9",
    "anndata>=0.8",
    "numpy>=1.21",
    "pandas>=1.3",
    "pyarrow>=10.0",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "joblib>=1.2",
    "statsmodels>=0.13",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "adjustText>=0.7",
    'importlib_resources>=5.0; python_version < "3.10"',
]

[project.optional-dependencies]
advanced = ["scvelo>=0.3.0"]
pseudobulk = ["pydeseq2>=0.4.0"]
gene_features = ["gtfparse>=1.3.0"]
memento = ["memento-de>=0.1.0,<0.3.0"]
gsea = ["gseapy>=1.1"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4.0", "pre-commit>=3.5", "mypy>=1.10"]

[project.scripts]
generate-gene-features = "scatrans.generate_gene_features:main"

[project.urls]
Homepage = "https://github.com/leelieber2025/scATrans"
Documentation = "https://scatrans.readthedocs.io"
Changelog = "https://scatrans.readthedocs.io/en/latest/changelog.html"

[tool.setuptools.packages.find]
where = ["src"]
# Packages only (scatrans.tl, scatrans.enrich, …). Flat modules scatrans/tl.py and
# scatrans/enrich.py must never be reintroduced: they shadow the package dirs and
# ship as unreachable dead code. Guarded by tests/test_package_layout.py.

[tool.setuptools.package-data]
scatrans = [
    "data/*.parquet",
    "data/*.md",
    "data/*.gmt",
    "data/*.tsv",
    "data/*.txt",
    # You can also put sets in a subfolder if you prefer:
    # "data/gene_sets/*.gmt",
]

# Single source of truth: src/scatrans/_version.py (__version__).
# Bump that file for a release; no setuptools_scm / git tag required.
[tool.setuptools.dynamic]
version = {attr = "scatrans._version.__version__"}

# Ruff: fast Python linter + formatter (replaces many tools)
[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    "backup/*",
    "legacy/*",
    "tests/.ipynb_checkpoints/*",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length (formatter handles)
    "B008",  # do not perform function calls in argument defaults (we have some scanpy-style)
    "B904",  # within except raise from (intentional in several places)
]

[tool.ruff.lint.isort]
known-first-party = ["scatrans"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
# Ensure the project root is on sys.path for fixture discovery and src-layout editable installs
# (helps in CI, zip extractions, and when cwd differs slightly)
pythonpath = ["src", "."]
# Daily dev: skip plot + slow. Override examples:
#   pytest -m "not plot"          # include slow integration tests
#   pytest -m plot              # plotting only
#   pytest                      # pass -m "" to run everything
addopts = "-q --tb=short -m 'not plot and not slow'"
markers = [
    "plot: matplotlib / scat.pl visualization (skipped by default)",
    "slow: expensive integration (permutation, mixed model, bundled enrichment)",
]
filterwarnings = [
    "ignore::FutureWarning:anndata.*",
]

[tool.coverage.run]
source = ["src/scatrans"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
# Local tip (matches CI coverage measurement):
#   pip install "pydeseq2>=0.4.0" "memento-de>=0.1.0,<0.3.0" "gseapy>=1.1" "gtfparse>=1.3.0"
#   pytest -m "not plot and not slow" --cov=scatrans --cov-report=xml:coverage-default.xml
#   Including @pytest.mark.slow (GSEA integration, etc.):
#     pytest -m "not plot" --cov=scatrans --cov-report=term-missing
# CI enforces scatrans._de ≥70% *line-rate* on the default suite only.

[tool.coverage.paths]
source = ["src/scatrans", "*/site-packages/scatrans"]

